# locuscomparepy

./: .gitignore  NEWS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/locuscompare/: __init__.py  analysis.py  config.py  core.py  datasets.py  db.py  io.py  plot.py
src/locuscompare/data/: __init__.py
tests/: test_assign_color.py  test_core.py  test_db.py  test_get_lead_snp.py  test_locuscompare_validation.py  test_read_metal.py
