[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "locuscomparepy"
version = "0.1.1"
description = "Visualize GWAS-QTL colocalization events (Python port of the R package locuscomparer)"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{ name = "Boxiang Liu", email = "jollier.liu@gmail.com" }]
keywords = ["GWAS", "eQTL", "colocalization", "locuszoom", "genetics", "QTL"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "scipy>=1.9",
    "plotnine>=0.14",
    "PyMySQL>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/boxiangliu/locuscomparepy"
"R package (locuscomparer)" = "https://github.com/boxiangliu/locuscomparer"

[tool.hatch.build.targets.wheel]
packages = ["src/locuscompare"]

[tool.pytest.ini_options]
testpaths = ["tests"]
